fix(test): allow Robolectric file descriptor access on JDK 21